<resources>
    <string name="app_name">Homework</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile">User profile</string>
    <string name="repository_list">Repository List</string>
    <string name="name">Name: </string>
    <string name="company">Company: </string>
    <string name="repository_id">Repository id: </string>
    <string name="repository_name">Repository name: </string>
    <string name="created_at">Created at: </string>
    <string name="updated_at">Updated at: </string>
    <string name="pushed_at">Pushed at: </string>
    <string name="git_url">Git URL: </string>
    <string name="default_branch">Default branch: </string>
    <string name="open_issues">Open issues: </string>
    <string name="has_issues">Has issues: </string>
    <string name="repository_info">Repository Info </string>
    <string name="loading">Loading </string>
    <string name="connection_error_message">Can not connect to server, try again later </string>
    <string name="url">Url: </string>
    <string name="keys_url">Keys Url: </string>
    <string name="teams_url">Teams Url: </string>
    <string name="commits_url">Commits Url: </string>
    <string name="comments_url">Comments Url: </string>
    <string name="assignees_url">Assignees Url: </string>
    <string name="branches_url">Branches Url: </string>


</resources>